@@ -1,2 +1,11 @@
 # understanding-the-jvm
-understanding-the-jvm
+## command
+```bash
+mvn clean compile
+java -cp target/classes/ -XX:+PrintGCDetails com.zlpha.utj.ch03.ReferenceCountingGC
+
+mvn clean compile exec:java -Dexec.mainClass=com.zlpha.utj.ch03.ReferenceCountingGC
+```
+
+## reference
+> http://www.mojohaus.org/exec-maven-plugin/
